lab 1 should be complete with this

--- a/labs/1/index.html
+++ b/labs/1/index.html
@@ -30,8 +30,8 @@
     <main>
       <!--figure w/ img-->
       <figure id="me">
-        <!--replace this img-->
-        <img src="img/juan_doe.png" alt="Pictue of Bradley Wernick" id="mugshot">
+        <!--quality pictures only-->
+        <img src="img/bradley_wernick.JPG" alt="Pictue of Bradley Wernick" id="mugshot">
       </figure>
       
       <div id="welcomeText">
