--- a/homework/1/c++.html
+++ b/homework/1/c++.html
@@ -30,18 +30,26 @@
         <div>
           <ul>
             <li><b>Professions and Industries:</b></li>
-            <ul>
-              <li>C++ software engineers, C++ software developers, embedded engineers, programmer analysts</li>
-              <li>Used by employers in Information Technology, Engineering, Professional Services, Design, Quality Control and Management</li>
-            </ul>
+            <li style="list-style: none">
+              <ul>
+                <li>C++ software engineers, C++ software developers, embedded engineers, programmer analysts</li>
+                <li>Used by employers in Information Technology, Engineering, Professional Services, Design, Quality Control and Management</li>
+              </ul>
+            </li>
+            
             <li><b>Major Organizations:</b></li>
-            <ul>
-              <li>Google, Mozilla, Firefox, Winamp, Adobe Software, Amazon, Lockheed Martin</li>
-            </ul>
+            <li style="list-style: none">
+              <ul>
+                <li>Google, Mozilla, Firefox, Winamp, Adobe Software, Amazon, Lockheed Martin</li>
+              </ul>
+            </li>
+            
             <li><b>Specializations and Industries:</b></li>
-            <ul>
-              <li>System/Application Software, Drivers, Client-Server Applications, Embedded Firmware</li>
-            </ul>
+            <li style="list-style: none">
+              <ul>
+                <li>System/Application Software, Drivers, Client-Server Applications, Embedded Firmware</li>
+              </ul>
+            </li>
           </ul>
         </div>
 
