--- a/homework/1/python.html
+++ b/homework/1/python.html
@@ -31,18 +31,26 @@
         <div>
           <ul>
             <li><b>Professions and Industries:</b></li>
-            <ul>
-              <li>Python developers, software engineers, back end developers, Python programmers</li>
-              <li>Used by employers in information technology, engineering, professional services and design</li>
-            </ul>
+            <li style="list-style: none">
+              <ul>
+                <li>Python developers, software engineers, back end developers, Python programmers</li>
+                <li>Used by employers in information technology, engineering, professional services and design</li>
+              </ul>
+            </li>
+            
             <li><b>Major Organizations:</b></li>
-            <ul>
-              <li>Google, Pinterest, Instagram, YouTube, DropBox, NASA, ESRI</li>
-            </ul>
+            <li style="list-style: none">
+              <ul>
+                <li>Google, Pinterest, Instagram, YouTube, DropBox, NASA, ESRI</li>
+              </ul>
+            </li>
+            
             <li><b>Specializations and Industries:</b></li>
-            <ul>
-              <li>Web and Internet development; scientific and numeric computing; desktop graphical user interfaces</li>
-            </ul>
+            <li style="list-style: none">
+              <ul>
+                <li>Web and Internet development; scientific and numeric computing; desktop graphical user interfaces</li>
+              </ul>
+            </li>
           </ul>
         </div>
 
