--- a/homework/1/swift.html
+++ b/homework/1/swift.html
@@ -30,18 +30,26 @@
         <div>
           <ul>
             <li><b>Professions and Industries:</b></li>
+            <li style="list-style: none">
               <ul>
                 <li>Swift Platform Developers, iOS Mobile Application Developers, Software Developers, Senior Programmers, Data Engineers</li>
                 <li>Information Technology, Engineering, Design, Management and Professional Services</li>
               </ul>
+            </li>
+            
             <li><b>Major Organizations:</b></li>
+            <li style="list-style: none">
               <ul>
                 <li>Apple, Getty Images, Slack, Dow Jones, Playlist Media</li>
               </ul>
+            </li>
+
             <li><b>Specializations and Industries:</b></li>
+            <li style="list-style: none">
               <ul>
                 <li>Software development</li>
               </ul>
+            </li>
           </ul>
         </div>
 
