--- a/labs/hangman/index.html
+++ b/labs/hangman/index.html
@@ -24,6 +24,17 @@
             <div id="man">
                 <img src="img/stick_0.png" id="hangImg">
             </div>
+            
+            <div id="won">
+                <h2>You Won!</h2>
+                <button class = "replayBtn btn btn-success">Play Again?</button>
+            </div>
+            <div id="lost">
+                <h2>You Lost!</h2>
+                <button class = "replayBtn btn btn-warning">Play Again?</button>
+            </div>
         </div>
+        
+        <script src="js/hangman.js"></script>
     </body>
 </html>
