--- a/labs/hangman/index.html
+++ b/labs/hangman/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Hangman</title>
-        <link  href="css/styles.css" rel="stylesheet" type="text/css" />
+        <link  href="styles.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         
