--- a/homework/4/index.html
+++ b/homework/4/index.html
@@ -13,6 +13,21 @@
 			<img id="trees" src="images/trees.png">
 			<img id="mouse" src="images/mouse_standing.gif">
 		</div>
+		
+		<audio id="sndMusic" preload="auto">
+			<source src = "sound/BigPoppa.mp3">
+			<source src = "sound/BigPoppa.wav">
+		</audio> 
+		
+		<audio id="sndJump" preload="auto">
+			<source src = "sound/jump.mp3">
+			<source src = "sound/jump.wav">
+		</audio> 
+		
+		<audio id="sndland" preload="auto">
+			<source src = "sound/land.mp3">
+			<source src = "sound/land.wav">
+		</audio> 
 	</body>
 </html>
 
